Agregue contacto, galeria, sobre nosotros, plomeria y electricidad

--- a/electricidad.html
+++ b/electricidad.html
@@ -187,16 +187,16 @@
     <!-- <<< ----------- Fin Menu Hamburguesa ----------- >>> -->
 
     <!-- <<< ----------- * ----------- Fin Header Celular ----------- * ----------- >>> -->
-
     <main>
         <div class="container">
 
+
             <!-- Presentación -->
-            <h1 class="centrado mrt30">Techos</h1>
+            <h1 class="centrado mrt30">Electricidad</h1>
 
             <!-- Imagen Principal -->
             <div class="centrado mrt30">
-                <img class="img-principal" src="/img/techos.jpeg" alt="img-principal">
+                <img class="img-principal" src="/img/electricidad.jpg" alt="img-principal">
             </div>
             <!-- Fin Imagen Principal -->
 
@@ -217,16 +217,51 @@
 
             <div class="contenedor-cards">
                 <div class="centrado cards">
-                    <div class="" id="tejas">
+                    <div class="" id="luminarias">
                         <div class="mr10">
-                            <img class="img-tarjetas mrt10" src="/img/techos/teja.png" alt="teja">
+                            <img class="img-tarjetas mrt10" src="/img/electricidad/luminarias.png" alt="luminarias">
                             <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
                                     alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
                     </div>
-                    <div class="" id="chapa">
+                    <div class="" id="tomas">
                         <div class="mr10">
-                            <img class="img-tarjetas mrt10" src="/img/techos/chapa.png" alt="chapa">
+                            <img class="img-tarjetas mrt10" src="/img/electricidad/tomas.png" alt="tomas">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="" id="tableros">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/electricidad/tableros.png" alt="tableros">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="" id="porteros">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/electricidad/porteros.png" alt="porteros">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="" id="termotanques">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/electricidad/termotanques.png" alt="termotanques">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="" id="ventiladores">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/electricidad/ventilador.png" alt="ventiladores">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="" id="aires">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/electricidad/aires.png" alt="aires">
                             <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
                                     alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
