--- a/galeria.html
+++ b/galeria.html
@@ -187,20 +187,18 @@
     <!-- <<< ----------- Fin Menu Hamburguesa ----------- >>> -->
 
     <!-- <<< ----------- * ----------- Fin Header Celular ----------- * ----------- >>> -->
-
     <main>
         <div class="container">
 
+
             <!-- Presentación -->
-            <h1 class="centrado mrt30">Techos</h1>
+            <h1 class="centrado mrt30">Galería</h1>
 
             <!-- Imagen Principal -->
             <div class="centrado mrt30">
-                <img class="img-principal" src="/img/techos.jpeg" alt="img-principal">
+                <img class="img-principal" src="/img/planificacion.png" alt="img-principal">
             </div>
             <!-- Fin Imagen Principal -->
-
-            <h2 class="centrado mrt30">Trabajamos con diseño propio y Garantía Escrita</h2>
 
             <div class="centrado mrt30">
                 <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
@@ -217,16 +215,51 @@
 
             <div class="contenedor-cards">
                 <div class="centrado cards">
-                    <div class="" id="tejas">
+                    <div class="" id="galeria">
                         <div class="mr10">
-                            <img class="img-tarjetas mrt10" src="/img/techos/teja.png" alt="teja">
+                            <img class="img-tarjetas mrt10" src="/img/galeria/galeria.png" alt="img">
                             <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
                                     alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
                     </div>
-                    <div class="" id="chapa">
+                    <div class="" id="galeria">
                         <div class="mr10">
-                            <img class="img-tarjetas mrt10" src="/img/techos/chapa.png" alt="chapa">
+                            <img class="img-tarjetas mrt10" src="/img/galeria/galeria.png" alt="img">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="" id="galeria">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/galeria/galeria.png" alt="img">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="" id="galeria">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/galeria/galeria.png" alt="img">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="" id="galeria">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/galeria/galeria.png" alt="img">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="" id="galeria">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/galeria/galeria.png" alt="img">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="" id="galeria">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/galeria/galeria.png" alt="img">
                             <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
                                     alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
