--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <!-- <<< ----------- Logo ----------- >>> -->
         <div class="mr10">
-            <a href="#"><img class="img-logo" src="/img/logo-ok.png" alt="logo"></a>
+            <a href="/index.html"><img class="img-logo" src="/img/logo-ok.png" alt="logo"></a>
         </div>
         <!-- <<< ----------- Fin Logo ----------- >>> -->
 
@@ -88,18 +88,18 @@
                     <p class="text-menu">Plomería</p>
                 </div>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#"><b>Instalaciones</b></a></li>
-                    <li><a class="dropdown-item" href="#">Tanques</a></li>
-                    <li><a class="dropdown-item" href="#">Cisternas</a></li>
-                    <li><a class="dropdown-item" href="#">Bombas Centrifugas</a></li>
-                    <li><a class="dropdown-item" href="#">Bombas Presurizadoras</a></li>
-                    <li><a class="dropdown-item" href="#">Bajadas de Tanque</a></li>
-                    <li><a class="dropdown-item" href="#"><b>Instalaciones Sanitarias</b></a></li>
-                    <li><a class="dropdown-item" href="#">Inodoros</a></li>
-                    <li><a class="dropdown-item" href="#">Bachas</a></li>
-                    <li><a class="dropdown-item" href="#">Bidets</a></li>
-                    <li><a class="dropdown-item" href="#">Piletas</a></li>
-                    <li><a class="dropdown-item" href="#">Griferías</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html"><b>Instalaciones</b></a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#tanques">Tanques</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#cisternas">Cisternas</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#centrifugas">Bombas Centrifugas</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#presurizadoras">Bombas Presurizadoras</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#bajadas">Bajadas de Tanque</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html"><b>Instalaciones Sanitarias</b></a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#inodoros">Inodoros</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#bachas">Bachas</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#bidets">Bidets</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#lavaderos">Lavaderos</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#griferias">Griferías</a></li>
                 </ul>
             </div>
 
@@ -109,28 +109,34 @@
                     <p class="text-menu">Electricidad</p>
                 </div>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#"><b>Instalaciones</b></a></li>
-                    <li><a class="dropdown-item" href="#">Luminarias</a></li>
-                    <li><a class="dropdown-item" href="#">Toma Corriente</a></li>
-                    <li><a class="dropdown-item" href="#">Tableros</a></li>
-                    <li><a class="dropdown-item" href="#">Porteros Eléctricos</a></li>
-                    <li><a class="dropdown-item" href="#">Termotanques</a></li>
-                    <li><a class="dropdown-item" href="#">Ventiladores de Techo</a></li>
-                    <li><a class="dropdown-item" href="#">Aire Acondicionado</a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html"><b>Instalaciones</b></a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html#luminarias">Luminarias</a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html#tomas">Toma Corriente</a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html#tableros">Tableros</a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html#porteros">Porteros Eléctricos</a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html#termotanques">Termotanques</a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html#ventiladores">Ventiladores de Techo</a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html#aires">Aire Acondicionado</a></li>
                 </ul>
             </div>
 
             <div class="btn dropdown">
-                <img class="img-ico" src="/img/iconos/galeria.png" alt="galeria">
-                <p class="text-menu">Galería</p>
+                <a href="/galeria.html">
+                    <img class="img-ico" src="/img/iconos/galeria.png" alt="galeria">
+                    <p class="text-menu">Galería</p>
+                </a>
             </div>
             <div class="btn dropdown">
-                <img class="img-ico" src="/img/iconos/nosotros.png" alt="nosotros">
-                <p class="mw50 text-menu">Sobre Nosotros</p>
+                <a href="/sobreNosotros.html">
+                    <img class="img-ico" src="/img/iconos/nosotros.png" alt="nosotros">
+                    <p class="mw50 text-menu">Sobre Nosotros</p>
+                </a>
             </div>
             <div class="btn dropdown">
-                <img class="img-ico" src="/img/iconos/atcliente.png" alt="atcliente">
-                <p class="text-menu">Contacto</p>
+                <a href="/contacto.html">
+                    <img class="img-ico" src="/img/iconos/atcliente.png" alt="atcliente">
+                    <p class="text-menu">Contacto</p>
+                </a>
             </div>
         </div>
         <!-- <<< ----------- Fin Menu ----------- >>> -->
@@ -144,7 +150,7 @@
 
     <header class="menu-hamburguesa">
         <!-- <<< ----------- Logo ----------- >>> -->
-        <a href="#"><img class="img-logo mr10" src="img/logo-ok.png" alt="logo"></a>
+        <a href="/index.html"><img class="img-logo mr10" src="img/logo-ok.png" alt="logo"></a>
         <!-- <<< ----------- Fin Logo ----------- >>> -->
 
         <!-- <<< ----------- Boton Menu Hamburguesa ----------- >>> -->
@@ -155,7 +161,7 @@
                     alt="cerrar"></button>
             <ul class="nav-list">
                 <li><a href="/index.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/inicio.png"
-                    alt="inicio">Inicio</a></li>
+                            alt="inicio">Inicio</a></li>
                 <li><a href="/hormigon.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/hormigonera.png"
                             alt="hormigonera">Hormigón</a></li>
                 <li><a href="/herreria.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/porton.png"
@@ -166,12 +172,12 @@
                             alt="brocha">Pintura</a></li>
                 <li><a href="/plomeria.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/grifo.png"
                             alt="grifo">Plomería</a></li>
-                <li><a href="/electricidad.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/electricidad.png"
-                            alt="electricidad">Electricidad</a></li>
+                <li><a href="/electricidad.html" class="dos-columnas"><img class="img-ico"
+                            src="/img/iconos/electricidad.png" alt="electricidad">Electricidad</a></li>
                 <li><a href="/galeria.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/galeria.png"
                             alt="galeria">Galería</a></li>
-                <li><a href="/sobreNosotros.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/nosotros.png"
-                            alt="nosotros">Sobre Nosotros</a></li>
+                <li><a href="/sobreNosotros.html" class="dos-columnas"><img class="img-ico"
+                            src="/img/iconos/nosotros.png" alt="nosotros">Sobre Nosotros</a></li>
                 <li><a href="/contacto.html" class="dos-columnas"><img class="img-ico" src="/img/iconos/atcliente.png"
                             alt="atcliente">Contacto</a></li>
             </ul>
@@ -191,11 +197,9 @@
 
             <!-- Imagen Principal -->
             <div class="centrado mrt30">
-                <img class="img-principal" src="/img/planificacion2.png" alt="img-principal">
+                <img class="img-principal" src="/img/planificacion.png" alt="img-principal">
             </div>
             <!-- Fin Imagen Principal -->
-
-            <h2 class="centrado mrt30">Trabajamos con diseño propio y Garantía Escrita</h2>
 
             <div class="centrado mrt30">
                 <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
@@ -223,19 +227,24 @@
                                 alt="hormigon"></a>
                     </div>
                     <div class="mrt30">
-                        <a href="#"><img class="img-tarjetas" src="/img/tarjetas/herreria.png" alt="herreria"></a>
+                        <a href="/herreria.html"><img class="img-tarjetas" src="/img/tarjetas/herreria.png"
+                                alt="herreria"></a>
                     </div>
                     <div class="mrt30">
-                        <a href="#"><img class="img-tarjetas" src="/img/tarjetas/techos.png" alt="techos"></a>
+                        <a href="/techos.html"><img class="img-tarjetas" src="/img/tarjetas/techos.png"
+                                alt="techos"></a>
                     </div>
                     <div class="mrt30">
-                        <a href="#"><img class="img-tarjetas" src="/img/tarjetas/pintura.png" alt="pintura"></a>
+                        <a href="/pintura.html"><img class="img-tarjetas" src="/img/tarjetas/pintura.png"
+                                alt="pintura"></a>
                     </div>
                     <div class="mrt30">
-                        <a href="#"><img class="img-tarjetas" src="/img/tarjetas/plomeria.png" alt="plomeria"></a>
+                        <a href="plomeria.html"><img class="img-tarjetas" src="/img/tarjetas/plomeria.png"
+                                alt="plomeria"></a>
                     </div>
                     <div class="mrt30">
-                        <a href="#"><img class="img-tarjetas" src="/img/tarjetas/electricidad.png" alt="plomeria"></a>
+                        <a href="electricidad.html"><img class="img-tarjetas" src="/img/tarjetas/electricidad.png"
+                                alt="electricidad"></a>
                     </div>
                 </div>
             </div>
