--- a/plomeria.html
+++ b/plomeria.html
@@ -191,12 +191,13 @@
     <main>
         <div class="container">
 
+
             <!-- Presentación -->
-            <h1 class="centrado mrt30">Techos</h1>
+            <h1 class="centrado mrt30">Plomería</h1>
 
             <!-- Imagen Principal -->
             <div class="centrado mrt30">
-                <img class="img-principal" src="/img/techos.jpeg" alt="img-principal">
+                <img class="img-principal" src="/img/fontaneria.jpeg" alt="img-principal">
             </div>
             <!-- Fin Imagen Principal -->
 
@@ -217,16 +218,72 @@
 
             <div class="contenedor-cards">
                 <div class="centrado cards">
-                    <div class="" id="tejas">
+                    <div class="" id="tanques">
                         <div class="mr10">
-                            <img class="img-tarjetas mrt10" src="/img/techos/teja.png" alt="teja">
+                            <img class="img-tarjetas mrt10" src="/img/plomeria/tanques.png" alt="tanques">
                             <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
                                     alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
                     </div>
-                    <div class="" id="chapa">
+                    <div class="" id="cisternas">
                         <div class="mr10">
-                            <img class="img-tarjetas mrt10" src="/img/techos/chapa.png" alt="chapa">
+                            <img class="img-tarjetas mrt10" src="/img/plomeria/cisternas.png" alt="cisternas">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="" id="centrifugas">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/plomeria/centrifugas.png" alt="centrifugas">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="" id="presurizadoras">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/plomeria/presurizadoras.png" alt="presurizadoras">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="" id="bajadas">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/plomeria/bajadas.png" alt="bajadas">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="" id="inodoros">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/plomeria/inodoros.png" alt="inodoros">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="" id="bachas">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/plomeria/bachas.png" alt="bachas">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="" id="bidets">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/plomeria/bidets.png" alt="bidets">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="" id="lavaderos">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/plomeria/lavaderos.png" alt="lavaderos">
+                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
+                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
+                        </div>
+                    </div>
+                    <div class="" id="griferias">
+                        <div class="mr10">
+                            <img class="img-tarjetas mrt10" src="/img/plomeria/griferias.png" alt="griferias">
                             <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
                                     alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
                         </div>
