--- a/herreria.html
+++ b/herreria.html
@@ -27,11 +27,11 @@
             <div class="dropdown">
                 <div class="btn dropdown" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                     <img class="img-ico" src="/img/iconos/hormigonera.png" alt="hormigonera">
-                    <p class="text-menu">Herrería</p>
+                    <p class="text-menu">Hormigón</p>
                 </div>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="/hormigon.html#losas">Losas</a></li>
-                    <li><a class="dropdown-item" href="/hormigon.html#encadenados">Encadenados</a></li>
+                    <li><a class="dropdown-item" href="/hormigon.html#encadenado">Encadenados</a></li>
                     <li><a class="dropdown-item" href="/hormigon.html#vigas">Vigas</a></li>
                     <li><a class="dropdown-item" href="/hormigon.html#columnas">Columnas</a></li>
                     <li><a class="dropdown-item" href="/hormigon.html#viguetas">Viguetas</a></li>
@@ -88,18 +88,18 @@
                     <p class="text-menu">Plomería</p>
                 </div>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#"><b>Instalaciones</b></a></li>
-                    <li><a class="dropdown-item" href="#">Tanques</a></li>
-                    <li><a class="dropdown-item" href="#">Cisternas</a></li>
-                    <li><a class="dropdown-item" href="#">Bombas Centrifugas</a></li>
-                    <li><a class="dropdown-item" href="#">Bombas Presurizadoras</a></li>
-                    <li><a class="dropdown-item" href="#">Bajadas de Tanque</a></li>
-                    <li><a class="dropdown-item" href="#"><b>Instalaciones Sanitarias</b></a></li>
-                    <li><a class="dropdown-item" href="#">Inodoros</a></li>
-                    <li><a class="dropdown-item" href="#">Bachas</a></li>
-                    <li><a class="dropdown-item" href="#">Bidets</a></li>
-                    <li><a class="dropdown-item" href="#">Piletas</a></li>
-                    <li><a class="dropdown-item" href="#">Griferías</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html"><b>Instalaciones</b></a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#tanques">Tanques</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#cisternas">Cisternas</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#centrifugas">Bombas Centrifugas</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#presurizadoras">Bombas Presurizadoras</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#bajadas">Bajadas de Tanque</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html"><b>Instalaciones Sanitarias</b></a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#inodoros">Inodoros</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#bachas">Bachas</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#bidets">Bidets</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#lavaderos">Lavaderos</a></li>
+                    <li><a class="dropdown-item" href="/plomeria.html#griferias">Griferías</a></li>
                 </ul>
             </div>
 
@@ -109,28 +109,34 @@
                     <p class="text-menu">Electricidad</p>
                 </div>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#"><b>Instalaciones</b></a></li>
-                    <li><a class="dropdown-item" href="#">Luminarias</a></li>
-                    <li><a class="dropdown-item" href="#">Toma Corriente</a></li>
-                    <li><a class="dropdown-item" href="#">Tableros</a></li>
-                    <li><a class="dropdown-item" href="#">Porteros Eléctricos</a></li>
-                    <li><a class="dropdown-item" href="#">Termotanques</a></li>
-                    <li><a class="dropdown-item" href="#">Ventiladores de Techo</a></li>
-                    <li><a class="dropdown-item" href="#">Aire Acondicionado</a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html"><b>Instalaciones</b></a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html#luminarias">Luminarias</a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html#tomas">Toma Corriente</a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html#tableros">Tableros</a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html#porteros">Porteros Eléctricos</a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html#termotanques">Termotanques</a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html#ventiladores">Ventiladores de Techo</a></li>
+                    <li><a class="dropdown-item" href="/electricidad.html#aires">Aire Acondicionado</a></li>
                 </ul>
             </div>
 
             <div class="btn dropdown">
-                <img class="img-ico" src="/img/iconos/galeria.png" alt="galeria">
-                <p class="text-menu">Galería</p>
+                <a href="/galeria.html">
+                    <img class="img-ico" src="/img/iconos/galeria.png" alt="galeria">
+                    <p class="text-menu">Galería</p>
+                </a>
             </div>
             <div class="btn dropdown">
-                <img class="img-ico" src="/img/iconos/nosotros.png" alt="nosotros">
-                <p class="mw50 text-menu">Sobre Nosotros</p>
+                <a href="/sobreNosotros.html">
+                    <img class="img-ico" src="/img/iconos/nosotros.png" alt="nosotros">
+                    <p class="mw50 text-menu">Sobre Nosotros</p>
+                </a>
             </div>
             <div class="btn dropdown">
-                <img class="img-ico" src="/img/iconos/atcliente.png" alt="atcliente">
-                <p class="text-menu">Contacto</p>
+                <a href="/contacto.html">
+                    <img class="img-ico" src="/img/iconos/atcliente.png" alt="atcliente">
+                    <p class="text-menu">Contacto</p>
+                </a>
             </div>
         </div>
         <!-- <<< ----------- Fin Menu ----------- >>> -->
