--- a/sobreNosotros.html
+++ b/sobreNosotros.html
@@ -191,16 +191,15 @@
     <main>
         <div class="container">
 
+
             <!-- Presentación -->
-            <h1 class="centrado mrt30">Techos</h1>
+            <h1 class="centrado mrt30">Sobre Nosotros</h1>
 
             <!-- Imagen Principal -->
             <div class="centrado mrt30">
-                <img class="img-principal" src="/img/techos.jpeg" alt="img-principal">
+                <img class="img-principal" src="/img/planificacion.png" alt="img-principal">
             </div>
             <!-- Fin Imagen Principal -->
-
-            <h2 class="centrado mrt30">Trabajamos con diseño propio y Garantía Escrita</h2>
 
             <div class="centrado mrt30">
                 <a href="" class="btn btn-dark"><img class="ico" src="/img/iconos/whatsapp.png"
@@ -214,27 +213,6 @@
                     situación con respuestas rápidas y eficientes.</h4>
             </div>
             <!-- Fin Presentación -->
-
-            <div class="contenedor-cards">
-                <div class="centrado cards">
-                    <div class="" id="tejas">
-                        <div class="mr10">
-                            <img class="img-tarjetas mrt10" src="/img/techos/teja.png" alt="teja">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
-                        </div>
-                    </div>
-                    <div class="" id="chapa">
-                        <div class="mr10">
-                            <img class="img-tarjetas mrt10" src="/img/techos/chapa.png" alt="chapa">
-                            <a href="" class="btn btn-dark mrt30"><img class="ico" src="/img/iconos/whatsapp.png"
-                                    alt="whatsapp"><b class="wsp">PEDIR PRESUPUESTO</b></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Fin Cards -->
 
             <div class="presentacion mrt30">
                 <h5 class="text-indent justify">En <b>LFConstrucciones</b>, realizamos servicios para empresas y
